# TFG

./: CMakeLists.txt  main.cpp
Configuration/: Configuration.h
HttpInterface/: HttpsInterface.cpp  HttpsInterface.h
RequestHandler/: RequestHandler.cpp  RequestHandler.h
RequestHandler/FileHandlingClass/: FileRequest.cpp  FileRequest.h
RequestHandler/JsonParser/: JsonParser.cpp  JsonParser.h
RequestHandler/Request/: Request.cpp  Request.h
RequestHandler/Response/: Response.cpp  Response.h
RequestHandler/TemplateManager/: TemplateManager.cpp  TemplateManager.h
RequestHandlers/: BasicRequest.cpp  BasicRequest.h  RegistrationRequest.cpp  RegistrationRequest.h  TutorialClass.cpp  TutorialClass.h
